force-app/main/default/objects/VRT_ProcessLog__c/VRT_ProcessLog__c.object-meta.xml
<CustomObject>
    <label>Process Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>