force-app/main/default/objects/VRT_ProcessLog__c/fields/VRT_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>VRT_Execution_Date__c</fullName>
    <label>Execution Date</label>
    <type>DateTime</type>
</CustomField>