force-app/main/default/objects/VRT_ProcessLog__c/fields/VRT_Invoice__c.field-meta.xml
<CustomField>
    <fullName>VRT_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice</referenceTo>
    <relationshipLabel>Process Logs</relationshipLabel>
    <relationshipName>Process_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>