force-app/main/default/objects/VRT_ProcessLog__c/fields/VRT_LKP_Rental__c.field-meta.xml
<CustomField>
    <fullName>VRT_LKP_Rental__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alquiler</label>
    <referenceTo>VRT_Rental__c</referenceTo>
    <relationshipLabel>Process Logs</relationshipLabel>
    <relationshipName>Process_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>