force-app/main/default/objects/VRT_ProcessLog__c/fields/VRT_Message__c.field-meta.xml
<CustomField>
    <fullName>VRT_Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>